# read-kb

./: .gitattributes  CMakeLists.txt  README.md  read-kb.sh  verifyBuild.sh
app/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  daemon.sh  echo-keyboard.sh  example.sh  libread-kb.cpp  libread-kb.h  main.cpp  program-wrapper.sh  read-kb-daemon-bash.sh  read-kb-daemon-cpp.cpp  simple-ux-bash.sh
include/read-kb/: libread-kb.h
lib/read-kb/: CMakeLists.txt
lib/read-kb/include/read-kb/: read-kb.h
lib/read-kb/src/: read-kb.cpp
lib/read-kb/test/: CMakeLists.txt  read-kb.test.cpp
lib/read-kb/test/res/: input.txt
src/: libread-kb.cpp  read-kb.sh
test/res/: input.txt
test/src/: CMakeLists.txt  read-kb.test.cpp
